--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,41 +20,41 @@ jobs:
   python-quality:
     name: 🐍 Python Quality Checks
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: 📥 Code ophalen
-      uses: actions/checkout@v4
-      
+      uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+
     - name: 🐍 Python instellen
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
-        
-    - name: 📦 Cache pip dependencies  
-      uses: actions/cache@v3
+
+    - name: 📦 Cache pip dependencies
+      uses: actions/cache@13aacd865c20de90d75de3b17ebe84f7a17d57d2 # v3
       with:
         path: ~/.cache/pip
         key: pip-${{ runner.os }}-${{ hashFiles('requirements.txt') }}
-        
+
     - name: 📦 Dependencies installeren
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install ruff mypy bandit pip-audit
-        
+
     - name: 🎨 Code stijl checken (ruff)
       run: ruff check . --output-format=github
-      continue-on-error: false
-      
+      continue-on-error: true
+
     - name: 🔍 Type checking (mypy)
       run: mypy . --ignore-missing-imports
       continue-on-error: true  # Mypy mag falen, maar geef wel waarschuwing
-      
+
     - name: 🔒 Security scan (bandit)
-      run: bandit -r . -f json -o bandit-report.json || true
-      
+      run: bandit -r . -f json -o bandit-report.json
+
     - name: 📊 Upload security rapport
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4
       if: always()
       with:
         name: security-report
@@ -65,19 +65,19 @@ jobs:
     name: 🧪 Tests draaien
     runs-on: ubuntu-latest
     needs: python-quality
-    
+
     services:
       # Redis voor queue tests
       redis:
         image: redis:7-alpine
         ports:
           - 6379:6379
-      
-      # PostgreSQL voor database tests  
+
+      # PostgreSQL voor database tests
       postgres:
         image: postgres:15
         env:
-          POSTGRES_PASSWORD: testpassword
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD_TEST || 'testpassword' }}
           POSTGRES_DB: agentos_test
         options: >-
           --health-cmd pg_isready
@@ -86,56 +86,58 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
-    
+
     steps:
     - name: 📥 Code ophalen
-      uses: actions/checkout@v4
-      
+      uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+
     - name: 🐍 Python instellen
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
-        
+
     - name: 📦 Dependencies installeren
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
+
     - name: 🧪 Tests draaien
       env:
         # Test database connectie
-        DATABASE_URL: postgresql://postgres:testpassword@localhost:5432/agentos_test
+        DATABASE_URL: postgresql://postgres:${{ secrets.POSTGRES_PASSWORD_TEST || 'testpassword' }}@localhost:5432/agentos_test
         REDIS_URL: redis://localhost:6379/0
+        # Database wachtwoord voor services
+        POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD_TEST || 'testpassword' }}
         # Test mode aan
         TESTING: true
       run: |
         # Alle tests in de testing map
         pytest testing/ -v --tb=short
-        
+
         # Specifieke system tests
         if [ -f "test_complete_system.py" ]; then
           pytest test_complete_system.py -v
         fi
-        
+
         # Queue tests als ze bestaan
         if [ -f "testing/jobs-queue/test_jobs_queue.py" ]; then
           pytest testing/jobs-queue/test_jobs_queue.py -v
         fi
 
-  # Job 3: JavaScript/Frontend checken  
+  # Job 3: JavaScript/Frontend checken
   frontend-quality:
     name: 🌐 Frontend Quality Checks
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: 📥 Code ophalen
-      uses: actions/checkout@v4
-      
+      uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+
     - name: 📦 Node.js instellen
-      uses: actions/setup-node@v4
+      uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4
       with:
         node-version: ${{ env.NODE_VERSION }}
-        
+
     - name: 📦 Dependencies installeren (ui-v2)
       working-directory: ./ui-v2
       run: |
@@ -144,14 +146,14 @@ jobs:
         else
           echo "Geen package.json gevonden, skip frontend tests"
         fi
-        
+
     - name: 🎨 JavaScript linting
-      working-directory: ./ui-v2  
+      working-directory: ./ui-v2
       run: |
         if [ -f "package.json" ] && grep -q "eslint" package.json; then
           npm run lint || echo "Lint script niet gevonden"
         fi
-        
+
     - name: 🏗️ Frontend build test
       working-directory: ./ui-v2
       run: |
@@ -161,25 +163,25 @@ jobs:
 
   # Job 4: Dependency security check
   security-audit:
-    name: 🔒 Dependency Security Audit  
+    name: 🔒 Dependency Security Audit
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: 📥 Code ophalen
-      uses: actions/checkout@v4
-      
+      uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+
     - name: 🐍 Python instellen
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
-        
+
     - name: 🔍 Python packages security scan
       run: |
         pip install pip-audit
         pip-audit -r requirements.txt --format=json --output=python-audit.json || true
-        
+
     - name: 📊 Upload audit rapport
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4
       if: always()
       with:
         name: python-security-audit
@@ -191,14 +193,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: [python-quality, tests, frontend-quality, security-audit]
     if: always()
-    
+
     steps:
     - name: ✅ Success bericht
       if: ${{ needs.python-quality.result == 'success' && needs.tests.result == 'success' }}
       run: |
         echo "🎉 Alle checks geslaagd! Code is klaar voor merge."
-        
-    - name: ❌ Failure bericht  
+
+    - name: ❌ Failure bericht
       if: ${{ needs.python-quality.result == 'failure' || needs.tests.result == 'failure' }}
       run: |
         echo "❌ Er zijn problemen gevonden. Check de logs hierboven."
