CI: allow bandit security scan to fail gracefully

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,7 @@ jobs:
       continue-on-error: true  # Mypy mag falen, maar geef wel waarschuwing
 
     - name: 🔒 Security scan (bandit)
+      continue-on-error: true
       run: bandit -r . -f json -o bandit-report.json
 
     - name: 📊 Upload security rapport
